syntax = "proto3";

service Times {
  rpc GetShowtimeByDate(ShowtimeDate) returns (ShowtimeData) {}
  rpc GetShowtimes(Empty) returns (stream ShowtimeData) {}
}

message ShowtimeDate {
  string date = 1;
}

message ShowtimeData {
  string date = 1;
  repeated MovieData movies = 2;
}

message MovieData {
  string movie = 1;
}

message Empty {}